--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,8 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color: #1a1a1a;
-  background-color: whitesmoke;
+  color:gainsboro;
+  background-color: #282c34;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
