--- a/frontend/src/pages/HomePage/HomePage.module.css
+++ b/frontend/src/pages/HomePage/HomePage.module.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: #fff;
+  background-color: #000000;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -23,6 +23,7 @@
   width: 100%;
   height: 200px;
   object-fit: cover;
+  margin-top: 0;
 }
 
 .gameInfo {
