--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -3,20 +3,20 @@
   justify-content: space-around;
   align-items: center;
   padding: 2vmin;
-  background-color: #3f4550; /* Explicit background to avoid inheritance */
-  color: white; /* Ensuring text color is white */
+  background-color: #3f4550;
+  color: white; 
 }
 
 .NavBar span {
-  color: rgb(255, 121, 226); /* Keeping specific colors */
+  color: rgb(255, 121, 226); 
 }
 
 Link {
-  color: white; /* Ensuring text color is white */
-  text-decoration: none; /* Removing underline from links */
+  color: white; 
+  text-decoration: none;
 }
 
 .NavBar a {
-  color: white; /* Ensuring text color is white */
-  text-decoration: none; /* Removing underline from links */
+  color: white; 
+  text-decoration: none; 
 }
